--- a/Book_projects/zero_2_prod_rust/zero2prod/Cargo.toml
+++ b/Book_projects/zero_2_prod_rust/zero2prod/Cargo.toml
@@ -12,6 +12,7 @@ name = "zero2prod"
 
 [dependencies]
 actix-web = "4"
+config = "0.14"
 serde = { version = "1", features = ["derive"] }
 sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
