--- a/Book_projects/zero_2_prod_rust/zero2prod/Cargo.toml
+++ b/Book_projects/zero_2_prod_rust/zero2prod/Cargo.toml
@@ -19,7 +19,10 @@ log = "0.4"
 serde = { version = "1", features = ["derive"] }
 sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
+tracing = { version = "0.1", features = ["log"] }
 uuid = { version = "1", features = ["v4"] }
+tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
+tracing-bunyan-formatter = "0.3"
 
 [dev-dependencies]
 reqwest = "0.12"
