--- a/Book_projects/zero_2_prod_rust/zero2prod/Cargo.toml
+++ b/Book_projects/zero_2_prod_rust/zero2prod/Cargo.toml
@@ -14,8 +14,6 @@ name = "zero2prod"
 actix-web = "4"
 chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
 config = "0.14"
-env_logger = "0.9"
-log = "0.4"
 serde = { version = "1", features = ["derive"] }
 sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
@@ -23,6 +21,7 @@ tracing = { version = "0.1", features = ["log"] }
 uuid = { version = "1", features = ["v4"] }
 tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
 tracing-bunyan-formatter = "0.3"
+tracing-log = "0.2"
 
 [dev-dependencies]
 reqwest = "0.12"
