--- a/Book_projects/zero_2_prod_rust/zero2prod/Dockerfile
+++ b/Book_projects/zero_2_prod_rust/zero2prod/Dockerfile
@@ -1,25 +1,31 @@
-# Builder stage
-FROM rust:1.86.0 AS builder 
+FROM lukemathwalker/cargo-chef:latest-rust-slim-bookworm AS chef 
 WORKDIR /app 
 RUN apt update && apt install lld clang -y
-COPY . . 
-ENV SQLX_OFFLINE=true
-RUN cargo build --release
 
-# Runtime stage
-FROM  debian:bookworm-slim AS runtime 
-WORKDIR /app 
-# Install OpenSSL - it is dynamically linked by some of our dependencies 
-# Install ca-certificates - it is needed to verify TLS certificates 
-# when establishing HTTPS connections
-RUN apt-get update -y && apt-get install -y --no-install-recommends openssl ca-certificates \
+FROM chef AS planner
+COPY . .
+# Compute a lock-like file for our project
+RUN cargo chef prepare --recipe-path recipe.json
+
+FROM chef AS builder 
+COPY --from=planner /app/recipe.json recipe.json
+# Build our project dependencies, not our application
+RUN cargo chef cook --release --recipe-path recipe.json
+# Up to this point, if our dependencie tree stays the same, all layers should be cached
+COPY . .
+ENV SQLX_OFFLINE=true
+# Build our project
+RUN cargo build --release --bin zero2prod
+
+FROM debian:bookworm-slim AS runtime
+WORKDIR /the/workdir/path
+RUN apt-get update -y \
+	&& apt-get install -y --no-install-recommends openssl ca-certificates \
 	# Clean up 
 	&& apt-get autoremove -y \
 	&& apt-get clean -y \
 	&& rm -rf /var/lib/apt/lists/*
-# Copy the compiled binary from the builder environment 
 COPY --from=builder /app/target/release/zero2prod zero2prod
-# Config file needed at runtime 
 COPY configuration configuration
 ENV APP_ENVIRONMENT=production
 ENTRYPOINT [ "./zero2prod" ]
