--- a/Book_projects/zero_2_prod_rust/zero2prod/Cargo.toml
+++ b/Book_projects/zero_2_prod_rust/zero2prod/Cargo.toml
@@ -27,6 +27,7 @@ tracing-actix-web = "0.7"
 serde-aux = "4"
 unicode-segmentation = "1.12.0"
 claims = "0.7"
+validator = "0.18"
 
 [dev-dependencies]
 reqwest = "0.12"
