--- a/Book_projects/zero_2_prod_rust/zero2prod/Cargo.toml
+++ b/Book_projects/zero_2_prod_rust/zero2prod/Cargo.toml
@@ -29,6 +29,9 @@ unicode-segmentation = "1.12.0"
 claims = "0.7"
 validator = "0.18"
 fake = "2.9"
+quickcheck = "1.0.3"
+quickcheck_macros = "1.1.0"
+rand = "0.8"
 
 [dev-dependencies]
 reqwest = "0.12"
