--- a/Book_projects/zero_2_prod_rust/zero2prod/Cargo.toml
+++ b/Book_projects/zero_2_prod_rust/zero2prod/Cargo.toml
@@ -32,7 +32,7 @@ fake = "2.9"
 quickcheck = "1.0.3"
 quickcheck_macros = "1.1.0"
 rand = "0.8"
-reqwest = "0.12"
+reqwest = { version = "0.12", features = ["json"] }
 
 [dev-dependencies]
 tokio = { version = "1", features = ["rt", "macros"] }
