--- a/Book_projects/zero_2_prod_rust/zero2prod/Cargo.toml
+++ b/Book_projects/zero_2_prod_rust/zero2prod/Cargo.toml
@@ -33,6 +33,7 @@ quickcheck = "1.0.3"
 quickcheck_macros = "1.1.0"
 rand = "0.8"
 reqwest = { version = "0.12", features = ["json"] }
+serde_json = "1.0.143"
 
 [dev-dependencies]
 tokio = { version = "1", features = ["rt", "macros"] }
