--- a/Book_projects/zero_2_prod_rust/zero2prod/configuration/base.yaml
+++ b/Book_projects/zero_2_prod_rust/zero2prod/configuration/base.yaml
@@ -1,4 +1,4 @@
-application: 
+application:
   port: 7979
 database:
   host: "localhost"
@@ -7,6 +7,7 @@ database:
   password: "password"
   database_name: "newsletter"
 email_client:
-  base_url:"localhost"
-  sender_email:"test@gmail.com"
-  authorization_token:"my-secret-token"
+  base_url: "localhost"
+  sender_email: "test@gmail.com"
+  authorization_token: "my-secret-token"
+  timeout_milliseconds: 10000
